# ac_cutout

./: .gitignore  6_example_materialize_to_tiff.ipynb  README.md  Untitled-1.ipynb  align_S32_S33_roi2_acdata.json  example.ipynb  pyproject.toml  utils.py
flattening_code/: 1_example_surface_detection.ipynb  1_example_surface_detection.py  Masking two surface.ipynb  Masking.ipynb  Untitled-1.ipynb  flattenning both surfaces.ipynb  surface_detection.py  visor_flatten.ipynb
script/: intensity_correction_CL.ipynb  intensity_correction_CL_WQ.ipynb
